fixed header alignment

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -5,11 +5,13 @@ body {
 }
 
 .header {
+  display: flex;
   height: 72px;
   background: darkmagenta;
   color: white;
   font-size: 32px;
   font-weight: 900px;
+  align-items: center;
 }
 
 .mid {
